<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Principal" >

    <Button
        android:id="@+id/bt_main_registrar"
        style="@style/ButtonText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@anim/main_button_gris"
        android:minHeight="25dip"
        android:textSize="25sp"
        android:text="@string/bt_registrar" />

    <Button
        android:id="@+id/bt_main_entrar"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_main_registrar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:background="@anim/main_button_orange"
        android:minHeight="25dip"
        android:textSize="25sp"
        android:text="@string/bt_entrar"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/input_main_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_main_entrar"
        android:layout_alignLeft="@+id/bt_main_entrar"
        android:layout_alignRight="@+id/bt_main_entrar"
        android:layout_marginBottom="10dp"
        android:background="@anim/main_text_white"
        android:drawableLeft="@drawable/wm_icon_pass"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/des_constrasenia"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/input_main_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/input_main_pass"
        android:layout_alignLeft="@+id/input_main_pass"
        android:layout_alignRight="@+id/input_main_pass"
        android:layout_marginBottom="4dp"
        android:background="@anim/main_text_white"
        android:drawableLeft="@drawable/wm_icon_email"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/des_email"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

</RelativeLayout>